precompiles/utils/macro/tests/precompile/compile-fail/handle/wrong-type.stderr
error: This parameter must have type `&mut impl PrecompileHandle`
  --> tests/precompile/compile-fail/handle/wrong-type.rs:21:18
   |
21 |     fn foo(_handle: u32) {
   |                     ^^^
